--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="about-content">
             <div class="what">
                 <div class="what-body">
-                    <h2>What is Recafe?</h2>
+                    <h2>What is ReCafe?</h2>
                     <label>Recafe is where people can relax through coffee. This is a cafe where everbody is welcome to relax at.</label>
                 </div>
             </div>
